--- a/resources/frontend/css/ui.css
+++ b/resources/frontend/css/ui.css
@@ -2251,3 +2251,61 @@ ul.row, ul.row-sm {
     margin-left: 0px; }
 
 /*# sourceMappingURL=ui.css.map */
+
+/*# sourceMappingURL=ui.css.map */
+
+.StripeElement {
+  box-sizing: border-box;
+  height: 40px;
+  padding: 10px 12px;
+  border: 1px solid #ccd0d2;
+  border-radius: 4px;
+  background-color: white;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  -webkit-transition: box-shadow 150ms ease;
+  transition: box-shadow 150ms ease;
+}
+
+    .StripeElement--focus {
+  box-shadow: 0 1px 3px 0 #cfd7df;
+}
+
+.StripeElement--invalid {
+  border-color: #fa755a;
+}
+
+.StripeElement--webkit-autofill {
+  background-color: #fefde5 !important;
+}
+
+#card-errors {
+  color: #fa755a;
+}
+
+
+.section-header{
+  height: 200px;
+  background-color:#273a43;
+}
+
+.fa-search{
+  height: 30px;
+}
+
+.remise{
+  color: red;
+}
+
+.text-wrap{
+  color: #fff;
+}
+
+.nav-link{
+    color: #fff;
+}
+
+.section-footer{
+  background-color:#273a43;
+}
+
+
