--- a/resources/frontend/css/ui.css
+++ b/resources/frontend/css/ui.css
@@ -2285,7 +2285,7 @@ ul.row, ul.row-sm {
 
 .section-header{
   height: 200px;
-  background-color:#273a43;
+  background-color:#273a43 !important;
 }
 
 .fa-search{
@@ -2305,7 +2305,7 @@ ul.row, ul.row-sm {
 }
 
 .section-footer{
-  background-color:#273a43;
+  background-color:#273a43 !important;
 }
 
 
