--- a/resources/frontend/css/ui.css
+++ b/resources/frontend/css/ui.css
@@ -352,8 +352,6 @@ article:after,
 .bg-white-50 {
   background-color: rgba(255, 255, 255, 0.5); }
 
-.bg-dark-50 {
-  background-color: rgba(0, 0, 0, 0.5); }
 
 .bg-grad-primary {
   background: #3395ff;
@@ -366,7 +364,7 @@ article:after,
   /* Standard syntax */ }
 
 .bg {
-  background-color: #273a43 !important; }
+  background-color: #fff !important; }
 
 .bg2 {
   background-color: #eceded !important; }
