--- a/resources/frontend/css/ui.css
+++ b/resources/frontend/css/ui.css
@@ -2307,4 +2307,8 @@ ul.row, ul.row-sm {
   background-color:#273a43 !important;
 }
 
+.section-content {
+  background-color: #fff !important; 
+}
+
 
